Initial example packing app

--- a/vue-begin/hooks/index.html
+++ b/vue-begin/hooks/index.html
@@ -68,6 +68,12 @@
         updated() {
           console.log('this.hitung', this.hitung);
         },
+        // beforeCreate
+        // created()
+        // beforeMount
+        // mounted
+        // updated
+        //
       });
     </script>
   </body>
